<resources>
    <string name="app_name">Accoffe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre">Nombre</string>
    <string name="product_area">Product area</string>
    <string name="name_estate">name estate</string>
    <string name="total_area">total area</string>
    <string name="h_product_area">product area</string>
    <string name="convertion_almendra">convertion almendra</string>
    <string name="dolar_peso">dolar-peso</string>
    <string name="type_crop">type crop</string>
    <string name="valor_maquinariay_mantenimiento">valor maquinariay mantenimiento</string>
    <string name="valor_combustible">valor_combustible</string>
    <string name="valor_transporte">valor transporte</string>
    <string name="jornal_recoleccion">jornal recoleccion</string>
    <string name="year_crop">year crop</string>
    <string name="year_drying">year drying</string>
    <string name="year_harvest">year harvest</string>
    <string name="year">year</string>
    <string name="year_planting">year planting</string>
    <string name="velocidad_del_viento">velocidad del viento</string>
    <string name="aspecto_hidrico">aspecto hidrico</string>
    <string name="perdida_del_suelo">perdida del suelo</string>
    <string name="urea">urea</string>
    <string name="albedo">albedo</string>
    <string name="duracion_del_cultivo">duracion del cultivo</string>
    <string name="agua_lluvia_circula_libre">agua lluvia, circula libre</string>
    <string name="contenido_materia_organica">contenido materia organica</string>
    <string name="cal">cal</string>
    <string name="pesticidas_y_fungicidas">pesticidas y fungicidas</string>
    <string name="prom_insolacion">prom insolacion</string>
    <string name="evaporacion_potencial">evaporacion potencial</string>
    <string name="promedio_de_elevacion">promedio de elevacion</string>
    <string name="fertilizante_de_nitrogeno">fertilizante_de_nitrogeno</string>
    <string name="materia_organica">materia organica</string>
    <string name="jornal_siembra_mante">jornal siembra/mante</string>
    <string name="capa_admosfera">capa admosfera</string>
    <string name="coeficiente_del_cultivo">coeficiente del cultivo</string>
    <string name="densidad">densidad</string>
    <string name="fertilizante_de_fosfato">fertilizante_de_fosfato</string>
    <string name="semillas">semillas</string>
    <string name="area_de_cultivo">area de cultivo</string>
    <string name="densidad_del_aire">densidad del aire</string>
    <string name="energia_libre_gibbs">energia libre gibbs</string>
    <string name="transpiracion">transpiracion</string>
    <string name="fertilizante_de_potacio">fertilizante de potacio</string>
    <string name="maquinaria_y_mantenimiento">maquinaria y mantenimiento</string>
    <string name="valor_maquinaria">valor maquinaria</string>
    <string name="valor_promedio_dolar">valor promedio dolar</string>
    <string name="valor_infraestructura">valor infraestructura</string>
    <string name="valor_promedio_electrico">valor promedio electrico</string>
    <string name="numero_de_costales">numero de costales</string>
    <string name="beneficios_por_a_o">beneficios por año</string>
    <string name="viento">viento</string>
    <string name="area_total">area_total</string>
    <string name="numero_de_patios">numero_de_patios</string>
    <string name="dolar">dolar</string>
    <string name="promedio_electrico">promedio_electrico</string>
    <string name="k_kg_m">k(kg/m³)</string>
    <string name="admosfera">admosfera</string>
    <string name="energia_libre">energia_libre</string>
    <string name="dias_de_secado">dias_de_secado</string>
    <string name="insolacion">insolacion</string>
    <string name="densidad_1000kg_m">densidad_(1000kg/m³)</string>
    <string name="produccion">produccion</string>
    <string name="asist_tecnica_papeleria">asist_tecnica_papeleria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="menu_drying">Drying</string>
    <string name="menu_harvest">Harvest</string>
    <string name="menu_plantation">Plantation</string>
    <string name="menu_pre_processing">Pre_processing</string>
    <string name="title_activity_registrase">RegistraseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>