<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_drying"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_drying" />
        <item
            android:id="@+id/nav_harvest"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_harvest" />
        <item
            android:id="@+id/nav_plantation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_plantation" />
        <item
            android:id="@+id/nav_pre_processing"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pre_processing" />
    </group>
</menu>