<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fup.accoffe.ui.dashboard.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fup.accoffe.ui.estate.EstateFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_estate" />

    <fragment
        android:id="@+id/nav_drying"
        android:name="com.fup.accoffe.ui.drying.DryingFragment"
        android:label="@string/menu_drying"
        tools:layout="@layout/fragment_drying" />
    <fragment
        android:id="@+id/nav_harvest"
        android:name="com.fup.accoffe.ui.harvest.HarvestFragment"
        android:label="@string/menu_harvest"
        tools:layout="@layout/fragment_harvest" />
    <fragment
        android:id="@+id/nav_plantation"
        android:name="com.fup.accoffe.ui.plantation.PlantationFragment"
        android:label="@string/menu_plantation"
        tools:layout="@layout/fragment_plantation" />
    <fragment
        android:id="@+id/nav_pre_processing"
        android:name="com.fup.accoffe.ui.pre_processing.PreProcessingFragment"
        android:label="@string/menu_pre_processing"
        tools:layout="@layout/fragment_pre_processing" />
</navigation>