<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pre_processing.PreProcessingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.estate.EstateFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_b_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/year"
            android:textColorHint="@color/black"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_b_year"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_b_val_maq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/valor_maquinaria"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_b_val_maq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_b_dolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/valor_promedio_dolar"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_b_dolar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_b_val_infra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/valor_infraestructura"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_b_val_infra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_b_promed_electrico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/valor_promedio_electrico"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_b_promed_electrico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_b_num_costales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/numero_de_costales"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_b_num_costales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_beneficios_por_año"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/beneficios_por_a_o"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_beneficios_por_año"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginHorizontal="10dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/boton_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/back"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/boton_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:singleLine="true"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</FrameLayout>